<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegActivity">
    <!-- 标题栏 -->
<RelativeLayout
    android:id="@+id/reg_title"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/layout_reg2_goback"
        android:layout_marginLeft="16dp"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_goblack"
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:scaleType="fitXY"
            android:layout_centerVertical="true"
            android:src="@mipmap/goback_icon"/>
        <TextView
            android:id="@+id/tv_reg1_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_goblack"
            android:layout_centerHorizontal="true"
            android:text="@string/back"
            android:textSize="20sp"
            android:textColor="@color/black_back"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg2_title"
        android:textSize="24sp"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        />
    <ImageView
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/user_icon"
        android:layout_alignParentRight="true"
        android:scaleType="centerInside"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_line"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
    <!-- 头像 -->
    <RelativeLayout
        android:id="@+id/layout_userhead"
        android:layout_marginTop="30dp"
        android:layout_below="@id/reg_title"
        android:layout_centerHorizontal="true"
        android:background="@drawable/reg_camera"
        android:layout_width="100dp"
        android:layout_height="100dp">
        <ImageView
            android:id="@+id/img_touxiang"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/camera"
            android:scaleType="centerInside"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addhead"
            android:layout_centerHorizontal="true"
            android:textColor="@color/gray_text"
            android:layout_below="@id/img_touxiang"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_userhead"
        android:padding="25dp">


    <EditText
        android:id="@+id/et_reg2_username"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/reg_textbackground"
        android:hint="@string/reg_username"
        android:textColorHint="@color/gray_text2"
        android:textSize="15sp"
        android:paddingLeft="12dp"
        />
        <EditText
            android:id="@+id/et_reg2_name"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"
            android:layout_below="@id/et_reg2_username"
            android:background="@drawable/reg_textbackground"
            android:hint="@string/name"
            android:textColorHint="@color/gray_text2"
            android:textSize="15sp"
            android:paddingLeft="12dp"
            />
        <EditText
            android:id="@+id/et_reg2_job"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"

            android:layout_below="@id/et_reg2_name"
            android:background="@drawable/reg_textbackground"
            android:hint="@string/post"
            android:textColorHint="@color/gray_text2"
            android:textSize="15sp"
            android:paddingLeft="12dp"
            />
        <EditText
            android:id="@+id/et_reg2_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"
            android:layout_below="@id/et_reg2_job"
            android:background="@drawable/reg_textbackground"
            android:hint="@string/phonenumber"
            android:textColorHint="@color/gray_text2"
            android:textSize="15sp"
            android:paddingLeft="12dp"
            />
        <EditText
            android:id="@+id/et_reg2_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"
            android:layout_below="@id/et_reg2_phonenumber"
            android:background="@drawable/reg_textbackground"
            android:hint="@string/password"
            android:textColorHint="@color/gray_text2"
            android:textSize="15sp"
            android:paddingLeft="12dp"
            />
        <CheckBox
            android:id="@+id/cb_reg2_showpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_text2"
            android:text="@string/showpassword"
            android:layout_alignRight="@id/et_reg2_password"
            android:layout_alignBaseline="@id/et_reg2_password"
            android:layout_marginRight="10dp"
            />
    <Button
        android:id="@+id/btn_reg2_next"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/reg_btn_next"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_below="@id/cb_reg2_showpassword"

        />
    <TextView
        android:id="@+id/tv_reg2_gologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_reg2_next"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/gray_text2"
        android:text="@string/haveid"/>
    </RelativeLayout>
</RelativeLayout>
