<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Pause_Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray2"
            >
            <TextView
                android:id="@+id/tv_fpb_title_lable1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/text_publicfix_gdxq"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                />
            <TextView
                android:id="@+id/tv_fpd_lable1"
                style="@style/text_gong_dan_xiang_qing_lable"
                android:text="@string/text_publicfix_gdbh"
                android:layout_below="@id/tv_fpb_title_lable1"
                />
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:singleLine="true"-->
            <!--android:textSize="16sp"-->
            <!--android:textColor="@color/gray_text4"-->
            <!--android:focusable="false"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:layout_marginLeft="100dp"-->
            <EditText
                android:id="@+id/et_fpd_gdbh"
                style="@style/text_gong_dan_xiang_qing_detail"
                android:layout_alignBaseline="@id/tv_fpd_lable1"
                android:text="20151120zyzxc0001" />
            <TextView
                android:id="@+id/tv_fpd_lable2"
                style="@style/text_gong_dan_xiang_qing_lable"
                android:text="@string/text_publicfix_gdms"
                android:layout_below="@id/tv_fpd_lable1"/>
            <EditText
                android:id="@+id/et_fpd_gdms"
                style="@style/text_gong_dan_xiang_qing_detail"
                android:layout_alignBaseline="@id/tv_fpd_lable2"
                android:text="卓越中心城4栋34层空调新风机故障" />
            <TextView
                android:id="@+id/tv_fpd_lable3"
                style="@style/text_gong_dan_xiang_qing_lable"
                android:text="@string/text_publicfix_jjcd"
                android:layout_below="@id/tv_fpd_lable2"/>
            <EditText
                android:id="@+id/et_fpd_jjcd"
                style="@style/text_gong_dan_xiang_qing_detail"
                android:layout_alignBaseline="@id/tv_fpd_lable3"
                android:text="二级" />
            <TextView
                android:id="@+id/tv_fpd_lable4"
                style="@style/text_gong_dan_xiang_qing_lable"
                android:text="@string/text_publicfix_gdly"
                android:layout_below="@id/tv_fpd_lable3"/>
            <EditText
                android:id="@+id/et_fpd_gdly"
                style="@style/text_gong_dan_xiang_qing_detail"
                android:layout_alignBaseline="@id/tv_fpd_lable4"
                android:text="BA子系统" />
            <TextView
                android:id="@+id/tv_fpd_lable5"
                style="@style/text_gong_dan_xiang_qing_lable"
                android:text="@string/text_publicfix_xgys"
                android:layout_below="@id/tv_fpd_lable4"/>
            <EditText
                android:id="@+id/et_fpd_xgys"
                style="@style/text_gong_dan_xiang_qing_detail"
                android:layout_alignBaseline="@id/tv_fpd_lable5"
                android:text="空调" />
            <TextView
                android:id="@+id/tv_fpd_lable6"
                style="@style/text_gong_dan_xiang_qing_lable"
                android:text="@string/text_publicfix_scsj"
                android:layout_below="@id/tv_fpd_lable5"/>
            <EditText
                android:id="@+id/et_fpd_scsj"
                style="@style/text_gong_dan_xiang_qing_detail"
                android:layout_alignBaseline="@id/tv_fpd_lable6"
                android:text="2016-1-12 14:44:29" />
            <TextView
                android:id="@+id/tv_fpb_title_lable2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/text_publicfix_gzfx"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:layout_below="@id/tv_fpd_lable6"
                />
            <TextView
                android:id="@+id/tv_fpd_lable12"
                style="@style/text_gong_dan_xiang_qing_lable"
                android:text="@string/text_publicfix_gzms"
                android:layout_below="@id/tv_fpb_title_lable2"/>
            <EditText
                android:id="@+id/et_fpd_gzms"
                style="@style/text_gong_dan_xiang_qing_detail"
                android:layout_alignBaseline="@id/tv_fpd_lable12"
                android:text="新风机派送风温度过高" />
            <EditText
                android:id="@+id/et_fpd_dzyy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/gray_text4"
                android:background="@color/white"
                android:singleLine="false"
                android:focusable="false"
                android:paddingLeft="100dp"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"

                android:layout_below="@id/tv_fpd_lable12"
                android:text="1.低压抽屉输出异常,不在380V~410V范围内.\n2.供电线路异常\n3.末端风柜(盘管)风速异常,正常值:80%\n4.防尘网前后压差异常" />
            <TextView
                android:id="@+id/tv_fpd_lable8"
                android:textSize="16sp"
                android:textColor="@color/black1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@color/white"
                android:focusable="false"
                android:text="@string/text_publicfix_dzyy"
                android:layout_below="@id/tv_fpd_lable12"
                android:layout_marginTop="15dp"
                />
            <View
                android:layout_below="@id/et_fpd_dzyy"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@color/gray2"/>
        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/ll_fpd_woyaojiedan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        >
        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/woyaojiedan_icon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black1"
            android:paddingLeft="10dp"
            android:text="@string/text_publicfix_wyjd"/>
    </LinearLayout>
</RelativeLayout>
