<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">
    <ImageView
        android:id="@+id/imageview_login_userhead"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:src="@mipmap/userhead"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"/>
    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:drawableLeft="@mipmap/username_left"
        android:background="@drawable/login_username"
        android:hint="@string/username_hint"
        android:singleLine="true"
        android:maxEms="16"
        android:layout_marginLeft="20dp"
        android:textColorHint="@color/gray"/>
    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:singleLine="true"
        android:maxEms="16"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_login_username"
        android:layout_marginTop="18dp"
        android:drawableLeft="@mipmap/password_left"
        android:background="@drawable/login_username"
        android:hint="@string/password_hint"
        android:textColorHint="@color/gray"/>
    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:background="@drawable/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_login_password"
        android:layout_marginTop="55dp"
        android:text="@string/btn_login"
        android:onClick="login"
        android:textColor="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_login"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_login_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_reg"/>
        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"
            android:background="@color/gray"/>
        <TextView
            android:id="@+id/tv_login_getpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_retrievepassword"/>
    </LinearLayout>
</RelativeLayout>
