<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegActivity">
    <!-- 标题栏 -->
<RelativeLayout
    android:id="@+id/reg_title"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/layout_getpwd2_goback"
        android:layout_marginLeft="16dp"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_goblack"
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:scaleType="fitXY"
            android:layout_centerVertical="true"
            android:src="@mipmap/goback_icon"/>
        <TextView
            android:id="@+id/tv_reg1_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_goblack"
            android:layout_centerHorizontal="true"
            android:text="@string/back"
            android:textSize="20sp"
            android:textColor="@color/black_back"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getpwd_title"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        />
    <ImageView
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/user_icon"
        android:layout_alignParentRight="true"
        android:scaleType="centerInside"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_line"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
    <!-- 头像 -->
    <RelativeLayout
        android:id="@+id/layout_userhead"
        android:layout_marginTop="50dp"
        android:layout_below="@id/reg_title"
        android:layout_centerHorizontal="true"
        android:background="@drawable/reg_camera"
        android:layout_width="100dp"
        android:layout_height="100dp">
        <ImageView
            android:id="@+id/img_touxiang"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/camera"
            android:scaleType="centerInside"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addhead"
            android:layout_centerHorizontal="true"
            android:textColor="@color/gray_text"
            android:layout_below="@id/img_touxiang"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/et_getpwd2_pwd1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@id/layout_userhead"
        android:background="@drawable/reg_textbackground"
        android:hint="@string/getpwd2_pwd1"
        android:textColorHint="@color/gray_text2"
        android:textSize="14sp"
        android:paddingLeft="12dp"
        />



    <EditText
        android:id="@+id/et_getpwd2_pwd2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/reg_textbackground"
        android:hint="@string/getpwd2_pwd2"
        android:textColorHint="@color/gray_text2"
        android:textSize="14sp"
        android:paddingLeft="12dp"
        android:layout_below="@+id/et_getpwd2_pwd1"

         />
    <Button
        android:id="@+id/btn_getpwd2_next"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/reg_btn_next"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:paddingLeft="12dp"
        android:gravity="center"
        android:layout_below="@id/et_getpwd2_pwd2"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
         />

</RelativeLayout>
